# texture

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Makefile  install.sh  render.yaml  texture.service
Weaver/: .env.example  .vulture_whitelist.py  Procfile  build.sh  demo_spec_framework.py  enrich_chart_specs.py  generate_spec_adapters.py  grpc_main.py  migrate_to_specs.py  pyproject.toml  requirements.txt  test_all_algorithms.py
Weaver/algorithms/base/: dependencies-sklearn-base.yaml  ontology-anomaly_detection-anomaly_detection.yaml  ontology-supervised-both.yaml  ontology-unsupervised-dimensionality_reduction.yaml
Weaver/algorithms/supervised/: adaboost.yaml  decision-tree.yaml  gradient-boosting.yaml  knn.yaml  linear-regression.yaml  logistic-regression.yaml  naive-bayes.yaml  random-forest.yaml  svm.yaml  xgboost.yaml
Weaver/algorithms/unsupervised/: dbscan.yaml  isolation-forest.yaml  kmeans.yaml  pca.yaml  tsne.yaml
Weaver/app/: main.py
Weaver/app/api/v1/: algorithms.py  datasets.py  runs.py
Weaver/app/core/: config.py  spec_loader.py
Weaver/app/grpc_server/: __init__.py  handlers.py  server.py
Weaver/app/ml/: adaboost.py  adaboost_spec.py  base.py  base_validator.py  dbscan.py  dbscan_spec.py  decision_tree.py  decision_tree_spec.py  gradient_boosting.py  gradient_boosting_spec.py  isolation_forest.py  isolation_forest_spec.py  kmeans.py  kmeans_spec.py  knn.py  knn_spec.py  linear_regression.py  linear_regression_spec.py  logistic_regression.py  logistic_regression_spec.py  naive_bayes.py  naive_bayes_spec.py  pca.py  pca_spec.py  random_forest.py  random_forest_spec.py  spec_adapter.py  svm.py  svm_spec.py  tsne.py  tsne_spec.py  xgboost_adapter.py  xgboost_spec.py
Weaver/app/ml/anomaly_detection/: isolation_forest.py  matrix_profile.py  (+3 more)
Weaver/app/pb/: __init__.py  common_pb2.py  common_pb2_grpc.py  weaver_pb2.py  weaver_pb2_grpc.py
Weaver/app/schemas/: algorithm.py  dataset.py  run.py
Weaver/app/services/: algorithm_registry.py  dataset_service.py  run_service.py  schema_service.py  spec_registry.py
Weaver/data-set/: README.md
Weaver/scripts/: download_boston_housing.sh  download_datasets.py  download_titanic.sh  test_schema_inference.py
Weaver/tests/: README.md  conftest.py  test_supervised_algorithms.py  test_unsupervised_algorithms.py
(+124 files in other folders)
